HW2 removed all var, swagger yaml fixes and small refactoring
