# app/controllers/postController.js
@@ -5,7 +5,15 @@ const actionPermissions = {
   getStatistic: permissions.VIEW_PHOTOS
 };
 
+const paths = {
+  getAllPosts: '/posts'
+};
+
 class PostsController {
+  static get paths() {
+      return paths;
+  }
+  
   static get permissions() {
       return actionPermissions;
   }
@@ -14,6 +22,11 @@ class PostsController {
     const result = PostService.getStatistic();
     res.json(result);
   }
+
+  static getAllPosts(req, res) {
+    const result = PostService.getAllPosts();
+    res.json(result);
+  } 
 }
 
 module.exports = PostsController;
